# triton-anchor

./: CMakeLists.txt  README.md  pyproject.toml  setup.py
.github/workflows/: add-benchmark.yml  ci.yml  dispatch-local-ci.yml  local-ci-via-gitee.yml  persistent-test-env-smoke.yml  poll-gitee-ci-status.yml  receive-local-ci-result.yml  self-hosted-runner-test.yml  static-checks.yml  sync-gitee.yml
csrc/: CMakeLists.txt
csrc/bindings/: CMakeLists.txt  triton_anchor_ext.cc  triton_anchor_passes.cc
csrc/include/triton-shared/: CMakeLists.txt
csrc/include/triton-shared/Analysis/: MaskAnalysis.h  OpFoldResultUtils.h
csrc/include/triton-shared/AnalysisStructured/: PtrAnalysis.h
csrc/include/triton-shared/Conversion/: CMakeLists.txt
csrc/include/triton-shared/Conversion/TritonArithToLinalg/: ConversionPatterns.hpp
csrc/include/triton-shared/Dialect/TritonStructured/IR/: TritonStructuredDialect.td
csrc/include/triton-shared/Utils/: FusionHelper.h  ReduceScanCommon.h  Utils.h
csrc/lib/: CMakeLists.txt
csrc/lib/Analysis/: CMakeLists.txt  MaskAnalysis.cpp  OpFoldResultUtils.cpp
csrc/lib/AnalysisStructured/: CMakeLists.txt  PtrAnalysis.cpp  PtrAnalysisTS.cpp
csrc/lib/Conversion/: CMakeLists.txt
csrc/lib/Conversion/TritonPtrToMemref/: TritonPtrToMemrefPass.cpp
csrc/lib/Conversion/TritonToLinalg/: CMakeLists.txt  TritonToLinalg.cpp
csrc/lib/Conversion/TritonToStructured/: TritonToStructuredPass.cpp
csrc/lib/Conversion/TritonToUnstructured/: AtomicOpsConverter.cpp  CMakeLists.txt  TritonToUnstructuredPass.cpp
csrc/lib/Conversion/UnstructuredToMemref/: UnstructuredToMemrefPass.cpp
csrc/lib/Dialect/: CMakeLists.txt
csrc/lib/Dialect/MathExt/: CMakeLists.txt  MathExtDialect.cpp
csrc/lib/Dialect/Triton/Transforms/: ExtractMoveBackward.cpp
csrc/lib/Dialect/TritonStructured/IR/: TritonStructuredOps.cpp
csrc/lib/Pipelines/: Pipelines.cpp
csrc/lib/Utils/: Utils.cpp
docs/: build.md  custom_backend.md
python/triton_anchor/adapters/: hybrid_adapter.py  triton_shared_adapter.py
tests/: test_e2e.py  test_smoke.py
triton/python/src/: main.cc
triton/python/triton/: __init__.py  _filecheck.py  _internal_testing.py  _utils.py  errors.py  knobs.py  testing.py
triton/python/triton/_C/libtriton/: linear_layout.pyi
triton/python/triton/backends/: __init__.py  compiler.py  driver.py
triton/python/triton/compiler/: __init__.py  code_generator.py  compiler.py  errors.py
triton/python/triton/experimental/gluon/: _runtime.py
triton/python/triton/experimental/gluon/amd/: gfx1250.py
triton/python/triton/experimental/gluon/language/: _core.py  _layouts.py  _semantic.py
triton/python/triton/experimental/gluon/language/amd/: __init__.py  _layouts.py  _ops.py
triton/python/triton/experimental/gluon/language/amd/cdna3/: __init__.py
triton/python/triton/experimental/gluon/language/amd/cdna4/: __init__.py  async_copy.py
triton/python/triton/experimental/gluon/language/amd/gfx1250/: __init__.py  async_copy.py  mbarrier.py  tdm.py
triton/python/triton/experimental/gluon/language/nvidia/ampere/: __init__.py  async_copy.py  mbarrier.py
triton/python/triton/experimental/gluon/language/nvidia/blackwell/: __init__.py  float2.py  tma.py
triton/python/triton/experimental/gluon/language/nvidia/hopper/: __init__.py  tma.py
triton/python/triton/experimental/gluon/nvidia/: hopper.py
triton/python/triton/language/: __init__.py  core.py  math.py  random.py  semantic.py  standard.py
triton/python/triton/language/extra/: __init__.py  libdevice.py
triton/python/triton/language/extra/cpu/: __init__.py  libdevice.py  utils.py
triton/python/triton/language/extra/smt/: __init__.py  core.py  semantic.py  types.py
triton/python/triton/language/extra/tle/: core.py
triton/python/triton/runtime/: __init__.py  _allocation.py  _async_compile.py  autotuner.py  build.py  cache.py  driver.py  errors.py  interpreter.py  jit.py
triton/python/triton/tools/: build_extern.py  compile.py  disasm.py  link.py  mxfp.py  tensor_descriptor.py
triton/python/triton/tools/triton_to_gluon_translater/: translator.py  translator_helpers.py
upstream/python/triton/: __init__.py
upstream/python/triton/_C/: __init__.py
upstream/python/triton/backends/: __init__.py
